# plc-assignment-2

./: .gitignore  README.md  grammar.txt  grammar_sly_tokens.txt  main.py  pyproject.toml
.github/workflows/: test.yml
knowledge_sharing/: interpreter.md  ui.md  uminus.md  visitor_pattern.md
src/: conftest.py  interpreter.py  language_parser.py  lexer.py  memory.py  parser.py  semantic_analyzer.py
src/ast/: expression.py  statement.py
src/ast_node/: statement.py
src/grammar_testing/: parser.out  parser.py  test_grammar.py  test_grammar.txt
src/ui/: ast_viewer.py  editor_widget.py  highlighter.py  main_window.py  memory_table.py  output_panel.py
tests/: test_ast.py  test_function.py  test_interpreter.py  test_lexer.py  test_memory.py  test_parser.py
